@@ -42,9 +42,9 @@ public:
 
   ~Comm() override;
 
-  static xbt::signal<void(Actor const&)> on_sender_start;
-  static xbt::signal<void(Actor const&)> on_receiver_start;
-  static xbt::signal<void(Actor const&)> on_completion;
+  static xbt::signal<void(Comm const&, Actor const&)> on_sender_start;
+  static xbt::signal<void(Comm const&, Actor const&)> on_receiver_start;
+  static xbt::signal<void(Comm const&, Actor const&)> on_completion;
 
   /*! take a vector s4u::CommPtr and return when one of them is finished.
    * The return value is the rank of the first finished CommPtr. */
