@@ -36,9 +36,6 @@ public:
   IoImpl* start();
   void post() override;
   void finish() override;
-
-  static xbt::signal<void(IoImpl const&)> on_start;
-  static xbt::signal<void(IoImpl const&)> on_completion;
 };
 } // namespace activity
 } // namespace kernel
